# paystream-contracts

./: .dockerignore  .env.dev.example  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DB_BACKUPS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NOTIFICATION_SERVICE_INTEGRATION.md  PAUSE_NOTIFICATION_FEATURE.md  PAUSE_NOTIFICATION_FLOW.md  PAUSE_NOTIFICATION_QUICK_REFERENCE.md  PAUSE_NOTIFICATION_README.md  README.md  README_API.md  REST_API_INTEGRATION.md  SECURITY.md  TODO.md  cliff.toml  deny.toml  deployment.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  hawkeye.toml  jest.config.js  package-lock.json  package.json
contracts/stream/: ACCESS_CONTROL.md  ACCESS_CONTROL_QUICK_REFERENCE.md  AUTH_TESTS_SUMMARY.md  Cargo.toml  REFACTORING_SUMMARY.md
contracts/stream/fuzz/: Cargo.toml
contracts/stream/fuzz/src/: fuzz_claimable.rs
contracts/stream/src/: access_control.rs  auth_tests.rs  balance.rs  events.rs  invariant_tests.rs  lib.rs  multisig_admin_tests.rs  multisig_tests.rs  prop_tests.rs  state_machine.rs  storage.rs  test.rs  types.rs  validate.rs
contracts/stream/src/api_validation/: error_codes.rs  mod.rs  schema.rs
contracts/stream/test_snapshots/auth_tests/: test_accept_admin_unauthorized.1.json  test_accept_employer_transfer_unauthorized.1.json  test_accept_employer_transfer_unauthorized_employee_cannot_accept.1.json  test_cancel_stream_unauthorized_employee_cannot_cancel.1.json  test_create_streams_batch_unauthorized.1.json  test_employee_cannot_withdraw_from_other_stream.1.json  test_employer_cannot_control_other_stream.1.json  test_old_employer_cannot_propose_transfer_after_transfer.1.json  test_old_employer_cannot_update_rate_after_transfer.1.json  test_pause_contract_wrong_nonce.1.json  test_propose_employer_transfer_unauthorized.1.json  test_propose_employer_transfer_unauthorized_employee_cannot_propose.1.json  test_resume_stream_unauthorized.1.json  test_resume_stream_unauthorized_employee_cannot_resume.1.json  test_set_max_streams_per_employer_unauthorized.1.json  test_set_protocol_fee_replayed_nonce.1.json  test_set_protocol_fee_unauthorized.1.json  test_unpause_contract_unauthorized.1.json  test_upgrade_unauthorized.1.json  test_upgrade_wrong_nonce.1.json  test_withdraw_unauthorized_not_employee.1.json
contracts/stream/test_snapshots/multisig_tests/: test_multisig_2_of_3_explicit_auth_pause.1.json  test_multisig_employer_batch_create.1.json  test_multisig_employer_cancel_stream.1.json  test_multisig_employer_create_stream.1.json  test_multisig_employer_pause_and_resume.1.json  test_multisig_employer_top_up.1.json  test_multisig_employer_transfer.1.json  test_multisig_employer_update_rate.1.json
contracts/stream/test_snapshots/test/: test_accept_admin_wrong_address_rejected.1.json  test_accept_employer_transfer_wrong_address_rejected.1.json  test_admin_can_adjust_max_limit.1.json  test_admin_nonce_increments.1.json  test_admin_transfer_full_flow.1.json  test_batch_create_produces_unique_ids.1.json  test_cancel_after_partial_withdraw.1.json  test_cancel_decrements_stream_count.1.json  test_cancel_stream_emits_event.1.json  test_cancel_stream_employee_cannot_cancel.1.json  test_cancel_stream_non_employer_rejected.1.json  test_cancel_stream_refunds_employer.1.json  test_cancel_stream_refunds_employer_and_employee_balances.1.json  test_cancel_upgrade_clears_pending.1.json  test_cannot_withdraw_from_cancelled_stream.1.json  test_claimable_correct_after_top_up.1.json  test_claimable_increases_with_time.1.json  test_cliff_allows_claimable_at_cliff.1.json  test_cliff_blocks_claimable_before_cliff.1.json  test_cliff_withdraw_after_cliff.1.json  test_create_stream.1.json  (+80 more)
contracts/stream/tests/: regression_suite.rs
python-sdk/: README.md  pyproject.toml
python-sdk/src/paystream_sdk/: __init__.py  client.py  py.typed  types.py  utils.py
python-sdk/src/paystream_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/cache/: Cargo.toml
services/cache/src/: lib.rs
services/pool/: Cargo.toml
services/pool/src/: lib.rs
(+394 files in other folders)
