[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paystream-sdk"
version = "0.1.0"
description = "Python SDK for PayStream Soroban contract interactions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "PayStream Team"}]
keywords = ["paystream", "stellar", "soroban", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

dependencies = [
  "stellar-sdk>=15.0.0",
]

authors = ["PayStream Team <dev@paystream.example>"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["paystream_sdk*"]

