[package]
name = "paystream-stream"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
paystream-token = { path = "../token", features = ["testutils"] }
proptest = { version = "1.6.0", default-features = false, features = ["std"] }

[features]
testutils = ["soroban-sdk/testutils"]
wasm-tests = ["testutils"]
