[package]
name = "paystream-pool"
version = "0.1.0"
edition = "2021"
description = "Database and Redis connection pooling for PayStream off-chain services"
license = "Apache-2.0"

[dependencies]
deadpool-postgres = { version = "0.14.0" }
deadpool-redis = { version = "0.18.0" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = { version = "1.0.61" }
tracing = { version = "0.1.40" }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros"] }
