[package]
name = "paystream-stream-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
paystream-stream = { path = "..", features = ["testutils"] }
proptest = "1"
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[[bin]]
name = "fuzz_claimable"
path = "src/fuzz_claimable.rs"
